[tool.poetry]
name = "sundash"
version = "0.0.7dev"
description = "Python & JS micro framework for realtime web UI applications"
authors = ["Danil Tryapchev <ruthus18@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ruthus18/sundash"
keywords = ["backend", "frontend", "server", "client", "ws", "framework"]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
websockets = "^12.0"
starlette = "^0.37.2"
colorlog = "^6.8.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
ipdb = "^0.13.13"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
poethepoet = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-complexity = 8
max-line-length = 79
ignore = [
    "E701",  # multiple statements on one line
    "E704",  # multiple statements on one line
    "E203",  # whitespace before ':'
    "E731",  # do not assign a lambda expression, use a def
    "E402",  # module level import not at top of file
    "W504",  # line break after binary operator
]
exclude = ["docs", "examples/__main__.py"]

[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
balanced_wrapping = true
force_single_line = true

[tool.poe.tasks]
_isort = "isort --overwrite-in-place ."
_flake8 = "flake8p ."
q = ["_isort", "_flake8"]  # q for quality :)
pub = "poetry publish --build"
